#1 rollback to java 17, adapt code, change groupid